k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: contact-svc
  namespace: contact
spec:
  selector:
    app: contact-dept
  ports:
  - port: 80
    targetPort: 80
