k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: static-ingress
 namespace: contact
spec:
 rules:
 - host: k8s-index.devopscoursewithbalakonda.xyz
   http:
     paths:
     - path: /contact-svc.contact.svc.cluster.local
       backend:
         serviceName: contact-svc
         servicePort: 80
